# ResNet50_Demo

./: .gitignore  README.md  config.ini  demo_full_pipeline.py  main.py  pyproject.toml  requirements.txt  run_tests.py  transfer_learining_resnt50.py
resnet_classifier/: __init__.py  classifier.py  config.py  orchestrator.py  predictor.py
tests/: __init__.py  test_classifier.py  test_config.py  test_predictor.py
